--- a/_sass/includes/_header.scss
+++ b/_sass/includes/_header.scss
@@ -1,5 +1,6 @@
 .site-header {
   padding: 2%;
+  font-size: 1.25em;
   background: $brand-color;
   border-bottom: 1px solid $border-color;
   display: inline;
