--- a/_sass/layouts/_posts.scss
+++ b/_sass/layouts/_posts.scss
@@ -12,7 +12,7 @@ article {
   .subtitle {
     font-size: 1.45em;
     font-weight: normal;
-    margin: 0;
+    margin: 0 0 5px;
   }
   header {
     margin-bottom: 1em;
