--- a/_sass/layouts/_index.scss
+++ b/_sass/layouts/_index.scss
@@ -21,7 +21,7 @@
   .subtitle {
     font-size: 1.45em;
     font-weight: normal;
-    margin-bottom: 5px;
+    margin: 0 0 5px;
   }
   
   .post-teaser {
