--- a/_sass/base/_global.scss
+++ b/_sass/base/_global.scss
@@ -99,7 +99,8 @@ li > ul, li > ol {
     margin-left: 1em;
 }
 ol, ul {
-  list-style-position: inside;
+  list-style-position: outside;
+  margin-left:1em;
 }
 hr {
   border: 0;
