--- a/_sass/base/_global.scss
+++ b/_sass/base/_global.scss
@@ -50,6 +50,9 @@ h4 {
 blockquote {
     border-left: 2px solid;
     padding: 1em 1em;
+  p { 
+    margin-bottom: 0px; 
+  }
 }
 blockquote p:last-child,
 footer p:last-child {
