--- a/_sass/base/_global.scss
+++ b/_sass/base/_global.scss
@@ -50,13 +50,10 @@ h4 {
 blockquote {
     border-left: 2px solid;
     padding: 1em 1em;
-  p { 
-    margin-bottom: 0px; 
-  }
 }
 blockquote p:last-child,
 footer p:last-child {
-  margin-bottom: 0;
+  margin-bottom: 0 !important;
 }
 table {
   table-layout:fixed;
