--- a/_layouts/landing.html
+++ b/_layouts/landing.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
-<html>
-	{% include head.html %}
-
-	<body>
-		{% include header.html %}
-		{% include about.html %}
-		{% include contact.html %}
-		{% include footer.html %}
-		{% include js.html %}
-	</body>
+<html class="no-js">
+  {% include head.html %}
+  <body>
+    <div class="content">
+      {{ content }}
+    </div>
+    {% include footer.html %}
+  </body>
 </html>
