--- a/_layouts/landing.html
+++ b/_layouts/landing.html
@@ -2,6 +2,7 @@
 <html class="no-js">
   {% include head.html %}
   <body>
+    {% include header.html %}
     <div class="content">
       {{ content }}
     </div>
