--- a/_layouts/landing.html
+++ b/_layouts/landing.html
@@ -1,11 +1,10 @@
-<!DOCTYPE html>
-<html class="no-js">
-  {% include head.html %}
-  <body>
-    {% include header.html %}
-    <div class="content">
-      {{ content }}
-    </div>
-    {% include footer.html %}
-  </body>
-</html>
+---
+layout: default
+---
+<article {% if page.feature-img %}class="feature-image"{% endif %}>
+  <header style="background-image: url('{{ site.baseurl }}/{{ page.feature-img }}')">
+    <h1 class="title">{{ page.title }}</h1>
+    {% if page.subtitle %}<h2 class="subtitle">{{ page.subtitle }}</h2>{% endif %}
+  </header>
+  <section class="post-content">{{ content }}</section>
+</article>
