--- a/_layouts/landing.html
+++ b/_layouts/landing.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html class="no-js">
   {% include head.html %}
+  <style>
+    body {
+     font-family: Courier, monospace;
+    }
+  </style>
   <body>
     <div class="content">
       {{ content }}
