--- a/_layouts/landing.html
+++ b/_layouts/landing.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
+
 <html class="no-js">
   {% include head.html %}
-
+  <head><link rel="stylesheet" href="/_sass/includes/_landing.css"></head>
   <body>
     <div class="content">
           
