--- a/_layouts/landing.html
+++ b/_layouts/landing.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <html class="no-js">
-  <head><link rel="stylesheet" href="/_sass/includes/_landing.css"></head>
+  <head><link rel="stylesheet" href="/_sass/includes/_landing.scss"></head>
   <body>
     <div class="content">
           
