--- a/_layouts/landing.html
+++ b/_layouts/landing.html
@@ -1,8 +1,57 @@
 <!DOCTYPE html>
 
 <html class="no-js">
-  <head><link rel="stylesheet" href="/_sass/includes/_landing.scss"></head>
+	{% include head.html %}
   <body>
+    <style>
+          body {
+     font-family: Courier, monospace;
+    }
+    #landing {
+      font-size: 16px;
+      color: grey;
+      width: 500px;
+      height: auto;
+      margin: 0px auto;
+      padding: 50px;
+      margin-top: 10%;
+      border:none;
+      text-align: center;
+    }
+    h4 {
+      font-size: 18px;
+      color: orange;
+    }
+    
+    #nav {
+      font-size: 14px;
+      color: yellow;
+      width: 500px;
+      height: auto;
+      margin: 0px auto;
+      padding: 50px;
+      padding-top: 10px;
+      text-align: center;
+    }
+    
+    #nav a{
+      color:#efb64e;
+    }
+    
+    #nav a.hover {
+      opacity:.6;
+    }
+    
+    .logo {
+      height: 100px;
+      width: auto;
+      border-radius: 100px;
+      padding: 10px;
+      margin: 0px auto;
+      float: center;
+    }
+
+    </style>
     <div class="content">
           
       <div id="landing">
