--- a/_includes/head.html
+++ b/_includes/head.html
@@ -42,4 +42,10 @@
 	ga('send', 'pageview');
 	</script>
 	{% endif %}
+
+	{% if page.custom_css %}
+	  {% for stylesheet in page.custom_css %}
+		<link rel="stylesheet" href="/css/{{ stylesheet }}.css" media="screen" type="text/css">
+	  {% endfor %}
+	{% endif %}
 </head>
