--- a/_includes/head.html
+++ b/_includes/head.html
@@ -48,4 +48,11 @@
 		<link rel="stylesheet" href="/css/{{ stylesheet }}.css" media="screen" type="text/css">
 	  {% endfor %}
 	{% endif %}
+
+	{% if page.custom_js %}
+		{% for js_file in page.custom_js %}
+		<script src='/javascripts/{{ js_file }}.js' type="text/javascript"></script>
+		{% endfor %}
+	{% endif %}
+
 </head>
