--- a/_layouts/landing.html
+++ b/_layouts/landing.html
@@ -2,7 +2,9 @@
 
 <html class="no-js">
 {% include head.html %}
-
+  <head>
+    <link rel="stylesheet" href="https://use.typekit.net/wgg7ccc.css">
+  </head>
   <body>
     <div class="content">
           
