--- a/_layouts/landing.html
+++ b/_layouts/landing.html
@@ -16,7 +16,7 @@
       </div>
       
       <div id="nav">
-        <a href="">fiction</a> | <a href="">about</a> | <a href="">reviews</a> | <a href="">contact</a>
+        <a href="">about</a> | <a href="">writing</a> | <a href="">reviews</a> | <a href="">contact</a>
       </div>
       
     </div>
