--- a/css/landing.css
+++ b/css/landing.css
@@ -5,6 +5,9 @@ body {
   font-size: 16px;
   color: grey;
   width: 500px;
+  @media (max-width:400px) {
+    display: none !important;
+   }
   height: auto;
   margin: 0px auto;
   padding: 50px;
