--- a/css/landing.css
+++ b/css/landing.css
@@ -4,7 +4,7 @@ body {
 #landing {
   font-size: 16px;
   color: grey;
-  width: 500px;
+  width: 80%;
   @media (max-width:600px) {
     display: none !important;
    }
