--- a/css/landing.css
+++ b/css/landing.css
@@ -2,13 +2,16 @@ body {
   font-family: courier-prime, monospace;
 }
 #landing {
-  width: 800px;
   font-size: 16px;
   color: grey;
+  width: 500px;
+  @media (max-width:600px) {
+    display: none !important;
+   }
   height: auto;
+  margin: 0px auto;
   padding: 50px;
   margin-top: 10%;
-  float: center;
   border:none;
   text-align: center;
 }
