--- a/css/landing.css
+++ b/css/landing.css
@@ -4,7 +4,7 @@ body {
 #landing {
   font-size: 18px;
   color: grey;
-  width: 500px;
+  width: 1000px; !important
   height: auto;
   margin: 0px auto;
   padding: 50px;
