--- a/css/landing.css
+++ b/css/landing.css
@@ -4,7 +4,7 @@ body {
 #landing {
   font-size: 18px;
   color: grey;
-  width: 1000px !important;
+  width: 60%;
   height: auto;
   margin-top: 10%;
   text-align: center;
