--- a/css/landing.css
+++ b/css/landing.css
@@ -17,13 +17,16 @@ body {
   border:none;
 }
 
+#logo {
+
+}
+
 h4 {
   font-size: 18px;
   color: orange;
 }
 
 #nav {
-  font-size: 18px;
   height: auto;
   margin: 0px auto;
   padding: 50px;
@@ -38,6 +41,7 @@ h4 {
 
 #nav a:hover {
   opacity:0.7;
+  text-decoration: underline;
 }
 
 .logo {
@@ -47,4 +51,10 @@ h4 {
   margin: 0px auto;
   margin-bottom: 15px;
   float: center;
+  position:relative;
+}
+
+.lefty {
+  text-align: left;
+  line-height: 200%;
 }
