--- a/_layouts/landing.html
+++ b/_layouts/landing.html
@@ -9,10 +9,11 @@
     <div class="content">
           
       <div id="landing">
+
       <a href=""><img src="https://pbs.twimg.com/profile_images/999638781396307973/_SRJppSE_400x400.jpg" class="logo"></a>
-        
+      <div class="lefty">
       {{ content }}
-        
+      </div>  
       </div>
       
       <div id="nav">
