--- a/_layouts/piece.html
+++ b/_layouts/piece.html
@@ -10,12 +10,11 @@
           
       <div id="landing">
 
-      <center><a href=""><img src="https://pbs.twimg.com/profile_images/999638781396307973/_SRJppSE_400x400.jpg" class="logo"></a></center>
-      <center>{{ content }}</center>
+      {{ content }}  
       </div>
       
       <div id="nav">
-        <a href="/about">about</a> | <a href="/writing">writing</a> | <a href="/contact">contact</a>
+        <a href="/writing">back</a>
       </div>
       
     </div>
