--- a/_layouts/plain.html
+++ b/_layouts/plain.html
@@ -10,12 +10,13 @@
           
       <div id="landing">
 
-      <center><a href=""><img src="https://pbs.twimg.com/profile_images/999638781396307973/_SRJppSE_400x400.jpg" class="logo"></a></center>
-      <center>{{ content }}</center>
+      <div class="lefty">
+      {{ content }}
+      </div>  
       </div>
       
       <div id="nav">
-        <a href="/about">about</a> | <a href="/writing">writing</a> | <a href="/contact">contact</a>
+        <a href="/">back</a> | <a href="/about">about</a> | <a href="/writing">writing</a> | <a href="/contact">contact</a>
       </div>
       
     </div>
