--- a/_layouts/landing.html
+++ b/_layouts/landing.html
@@ -15,7 +15,7 @@
       </div>
       
       <div id="nav">
-        <a href="/about">about</a> | <a href="/writing">writing</a> | <a href="/contact">contact</a>
+        <a href="/writing">writing</a> | <a href="/contact">contact</a>
       </div>
       
     </div>
