--- a/_sass/base/_global.scss
+++ b/_sass/base/_global.scss
@@ -54,6 +54,7 @@ blockquote {
 blockquote p:last-child,
 footer p:last-child {
   margin-bottom: 0px !important;
+  padding-bottom: 0px !important;  
 }
 table {
   table-layout:fixed;
